syntax = "proto3";

package warden.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "redact/v3/redact.proto";
import "warden/service/v1/permission.proto";

// Secret Service - manages secrets with versioning and Vault integration
service WardenSecretService {
  // Create a new secret
  rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {
    option (google.api.http) = {
      post: "/v1/secrets"
      body: "*"
    };
  }

  // Get a secret by ID (returns metadata, not password)
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/{id}"
    };
  }

  // Retrieve the password for a secret
  rpc GetSecretPassword(GetSecretPasswordRequest) returns (GetSecretPasswordResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/{id}/password"
    };
  }

  // List secrets in a folder
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/secrets"
    };
  }

  // Update secret metadata
  rpc UpdateSecret(UpdateSecretRequest) returns (UpdateSecretResponse) {
    option (google.api.http) = {
      put: "/v1/secrets/{id}"
      body: "*"
    };
  }

  // Update secret password (creates new version)
  rpc UpdateSecretPassword(UpdateSecretPasswordRequest) returns (UpdateSecretPasswordResponse) {
    option (google.api.http) = {
      put: "/v1/secrets/{id}/password"
      body: "*"
    };
  }

  // Delete a secret
  rpc DeleteSecret(DeleteSecretRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/secrets/{id}"
    };
  }

  // Move secret to a different folder
  rpc MoveSecret(MoveSecretRequest) returns (MoveSecretResponse) {
    option (google.api.http) = {
      post: "/v1/secrets/{id}/move"
      body: "*"
    };
  }

  // List all versions of a secret
  rpc ListVersions(ListVersionsRequest) returns (ListVersionsResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/{secret_id}/versions"
    };
  }

  // Get a specific version
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/{secret_id}/versions/{version_number}"
    };
  }

  // Restore a previous version as current
  rpc RestoreVersion(RestoreVersionRequest) returns (RestoreVersionResponse) {
    option (google.api.http) = {
      post: "/v1/secrets/{secret_id}/versions/{version_number}/restore"
    };
  }

  // Search secrets across folders
  rpc SearchSecrets(SearchSecretsRequest) returns (SearchSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/secrets/search"
    };
  }
}

// Secret status
enum SecretStatus {
  SECRET_STATUS_UNSPECIFIED = 0;
  SECRET_STATUS_ACTIVE = 1;
  SECRET_STATUS_ARCHIVED = 2;
  SECRET_STATUS_DELETED = 3;
}

// Secret entity (without password)
message Secret {
  string id = 1 [json_name = "id"];
  uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string folder_id = 3 [json_name = "folderId"];
  string folder_path = 4 [json_name = "folderPath"];
  string name = 5 [json_name = "name"];
  string username = 6 [json_name = "username"];
  string host_url = 7 [json_name = "hostUrl"];
  string description = 8 [json_name = "description"];
  int32 current_version = 9 [json_name = "currentVersion"];
  google.protobuf.Struct metadata = 10 [json_name = "metadata"];
  SecretStatus status = 11 [json_name = "status"];
  google.protobuf.Timestamp create_time = 12 [json_name = "createTime"];
  google.protobuf.Timestamp update_time = 13 [json_name = "updateTime"];
  optional uint32 created_by = 14 [json_name = "createdBy"];
  optional uint32 updated_by = 15 [json_name = "updatedBy"];
}

// Secret version
message SecretVersion {
  uint32 id = 1 [json_name = "id"];
  string secret_id = 2 [json_name = "secretId"];
  int32 version_number = 3 [json_name = "versionNumber"];
  string comment = 4 [json_name = "comment"];
  string checksum = 5 [json_name = "checksum"];
  google.protobuf.Timestamp create_time = 6 [json_name = "createTime"];
  optional uint32 created_by = 7 [json_name = "createdBy"];
}

// Permission grant to apply during secret creation
message InitialPermissionGrant {
  SubjectType subject_type = 1 [json_name = "subjectType"];
  string subject_id = 2 [json_name = "subjectId"];
  Relation relation = 3 [json_name = "relation"];
}

// Request to create a secret
message CreateSecretRequest {
  // Folder ID (null for root-level)
  optional string folder_id = 1 [
    json_name = "folderId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Secret name
  string name = 2 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // Username associated with the secret
  string username = 3 [
    json_name = "username",
    (buf.validate.field).string = {max_len: 255}
  ];

  // Password to store
  string password = 4 [
    json_name = "password",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 65536
    },
    (redact.v3.value).string = ""
  ];

  // Host URL
  string host_url = 5 [
    json_name = "hostUrl",
    (buf.validate.field).string = {max_len: 2048}
  ];

  // Description
  string description = 6 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 4096}
  ];

  // Custom metadata (JSON)
  google.protobuf.Struct metadata = 7 [json_name = "metadata"];

  // Initial version comment
  string version_comment = 8 [
    json_name = "versionComment",
    (buf.validate.field).string = {max_len: 1024}
  ];

  // Permissions to grant on the newly created secret
  repeated InitialPermissionGrant initial_permissions = 9 [json_name = "initialPermissions"];
}

message CreateSecretResponse {
  Secret secret = 1 [json_name = "secret"];
}

// Request to get a secret
message GetSecretRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}

message GetSecretResponse {
  Secret secret = 1 [json_name = "secret"];
}

// Request to get secret password
message GetSecretPasswordRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Specific version (null for current)
  optional int32 version = 2 [json_name = "version"];
}

message GetSecretPasswordResponse {
  string password = 1 [json_name = "password", (redact.v3.value).string = ""];
  int32 version = 2 [json_name = "version"];
}

// Request to list secrets
message ListSecretsRequest {
  // Folder ID (null for root-level)
  optional string folder_id = 1 [
    json_name = "folderId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Pagination
  optional uint32 page = 2 [json_name = "page"];
  optional uint32 page_size = 3 [json_name = "pageSize"];

  // Filter by status
  optional SecretStatus status = 4 [json_name = "status"];

  // Filter by name
  optional string name_filter = 5 [json_name = "nameFilter"];
}

message ListSecretsResponse {
  repeated Secret secrets = 1 [json_name = "secrets"];
  uint32 total = 2 [json_name = "total"];
}

// Request to update secret metadata
message UpdateSecretRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New name
  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // New username
  optional string username = 3 [
    json_name = "username",
    (buf.validate.field).string = {max_len: 255}
  ];

  // New host URL
  optional string host_url = 4 [
    json_name = "hostUrl",
    (buf.validate.field).string = {max_len: 2048}
  ];

  // New description
  optional string description = 5 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 4096}
  ];

  // New metadata (replaces existing)
  optional google.protobuf.Struct metadata = 6 [json_name = "metadata"];

  // New status
  optional SecretStatus status = 7 [json_name = "status"];
}

message UpdateSecretResponse {
  Secret secret = 1 [json_name = "secret"];
}

// Request to update secret password
message UpdateSecretPasswordRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New password
  string password = 2 [
    json_name = "password",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 65536
    },
    (redact.v3.value).string = ""
  ];

  // Version comment
  string comment = 3 [
    json_name = "comment",
    (buf.validate.field).string = {max_len: 1024}
  ];
}

message UpdateSecretPasswordResponse {
  Secret secret = 1 [json_name = "secret"];
  SecretVersion version = 2 [json_name = "version"];
}

// Request to delete a secret
message DeleteSecretRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Permanently delete (skip soft-delete)
  bool permanent = 2 [json_name = "permanent"];
}

// Request to move a secret
message MoveSecretRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New folder ID (null to move to root)
  optional string new_folder_id = 2 [
    json_name = "newFolderId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];
}

message MoveSecretResponse {
  Secret secret = 1 [json_name = "secret"];
}

// Request to list versions
message ListVersionsRequest {
  string secret_id = 1 [
    json_name = "secretId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Pagination
  optional uint32 page = 2 [json_name = "page"];
  optional uint32 page_size = 3 [json_name = "pageSize"];
}

message ListVersionsResponse {
  repeated SecretVersion versions = 1 [json_name = "versions"];
  uint32 total = 2 [json_name = "total"];
}

// Request to get a specific version
message GetVersionRequest {
  string secret_id = 1 [
    json_name = "secretId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  int32 version_number = 2 [
    json_name = "versionNumber",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).int32 = {gte: 1}
  ];

  // Include password in response
  bool include_password = 3 [json_name = "includePassword"];
}

message GetVersionResponse {
  SecretVersion version = 1 [json_name = "version"];
  optional string password = 2 [json_name = "password", (redact.v3.value).string = ""];
}

// Request to restore a version
message RestoreVersionRequest {
  string secret_id = 1 [
    json_name = "secretId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  int32 version_number = 2 [
    json_name = "versionNumber",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).int32 = {gte: 1}
  ];

  // Comment for the new version created by restore
  string comment = 3 [
    json_name = "comment",
    (buf.validate.field).string = {max_len: 1024}
  ];
}

message RestoreVersionResponse {
  Secret secret = 1 [json_name = "secret"];
  SecretVersion new_version = 2 [json_name = "newVersion"];
}

// Request to search secrets
message SearchSecretsRequest {
  // Search query (searches name, username, host_url, description)
  string query = 1 [
    json_name = "query",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ];

  // Limit search to folder and subfolders (null for all)
  optional string folder_id = 2 [
    json_name = "folderId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Include subfolders in search
  bool include_subfolders = 3 [json_name = "includeSubfolders"];

  // Pagination
  optional uint32 page = 4 [json_name = "page"];
  optional uint32 page_size = 5 [json_name = "pageSize"];

  // Filter by status
  optional SecretStatus status = 6 [json_name = "status"];
}

message SearchSecretsResponse {
  repeated Secret secrets = 1 [json_name = "secrets"];
  uint32 total = 2 [json_name = "total"];
}
